--- a/style.css
+++ b/style.css
@@ -63,3 +63,20 @@ input[type="color"]::-webkit-color-swatch {
 input[type="color"]::-moz-color-swatch {
     border-radius: 9px;
 }
+
+.gridCol {
+    height: 1em;
+    width: 1em;
+    border: 1px solid #ddd;
+}
+
+.gridRow {
+    display: flex;
+}
+
+@media only screen and (max-width: 768px) {
+    .gridCol {
+        width: 0.8em;
+        height: 0.8em;
+    }
+}
